# sshme

./: README.md  flake.nix  pyproject.toml
sources/sshme/: __init__.py  __main__.py  config.py  history.py  menu.py  models.py  ssh.py  tmux.py
tests/: test_config.py  test_history.py  test_main.py  test_menu.py  test_ssh.py  test_tmux.py
